# pong-sfml

./: .gitignore  CMakeLists.txt  COPYING  README.md  run.sh
MXG/: Application.cpp  Application.hpp  DefaultScreen.hpp  DefaultState.hpp  Game.cpp  Game.hpp  Random.cpp  SFMLDebugDraw.cpp  SFMLDebugDraw.hpp  Screen.hpp  State.hpp
Pong/: Application.cpp  Application.hpp  Assets.cpp  Assets.hpp  Config.hpp.in  Defs.hpp  GameWorld.cpp  GameWorld.hpp  Main.cpp  Pong.cpp  Pong.hpp  Utils.cpp  Utils.hpp
Pong/Factory/: GameShapeFactory.cpp
Pong/GameObjects/: Ball.cpp  Ball.hpp  ComputerRacket.cpp  ComputerRacket.hpp  GameObject.hpp  Menu.cpp  Menu.hpp  Midfield.cpp  Midfield.hpp  PlayerRacket.cpp  PlayerRacket.hpp  Racket.cpp  Racket.hpp  ScoreBoard.cpp  ScoreBoard.hpp  Shade.cpp  Shade.hpp  Wall.cpp  Wall.hpp
Pong/InputHandler/: ComputerPlayerInputHandler.cpp  ComputerPlayerInputHandler.hpp  DefaultInputHandler.cpp  DefaultInputHandler.hpp  InputHandler.hpp  KeyboardInputHandler.cpp  KeyboardInputHandler.hpp  RaquetInputHandler.cpp  RaquetInputHandler.hpp
Pong/Screen/: DefaultScreen.cpp  DefaultScreen.hpp  GameScreen.cpp  GameScreen.hpp
Pong/State/: DefaultState.cpp  DefaultState.hpp  GameReadyState.cpp  GameReadyState.hpp  GameState.cpp  GameState.hpp
Pong/States/: DefaultState.cpp  DefaultState.hpp  GameMenuState.cpp  GameMenuState.hpp  GameOverState.cpp  GameOverState.hpp  GameReadyState.cpp  GameReadyState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp
Pong/UI/: ScoreBoard.cpp  ScoreBoard.hpp  Shade.cpp  Shade.hpp
assets/src/: logo.xcf  pong.xcf
lib/: Random.hpp  SFMLDebugDraw.cpp  SFMLDebugDraw.h
mxg/: DefaultScreen.hpp  Game.cpp  Game.hpp  SFMLDebugDraw.cpp  SFMLDebugDraw.h  SFMLDebugDraw.hpp  default_screen.hpp  game.cpp  game.hpp  random.hpp  screen.hpp  sfml_debug_draw.cpp  sfml_debug_draw.hpp
pong/: Defs.hpp  Factories.cpp  Factories.hpp  GameWorld.cpp  Pong.cpp  Pong.hpp  application.cpp  application.hpp  config.hpp  config.hpp.in  controller.hpp  debug_draw.cpp  debug_draw.hpp  defs.hpp  factories.cpp  factory.cpp  factory.hpp  game.cpp  game.hpp  game_objects.cpp  game_objects.hpp  game_screen.cpp  game_state.cpp  game_world.cpp  game_world.hpp  gamepads.hpp  helpers.cpp  helpers.hpp  input_handler.cpp  input_handler.hpp  keyboard_controller.cpp  keyboard_gamepad.cpp  main.cpp  pong.cpp  pong.hpp  screen.cpp  screen.hpp  state.cpp  state.hpp  util.cpp  (+1 more)
pong/factory/: GameShapeFactory.cpp  GameShapeFactory.hpp
pong/input_handler/: Command.hpp  ComputerPlayerInputHandler.cpp  ComputerPlayerInputHandler.hpp  DefaultInputHandler.cpp  DefaultInputHandler.hpp  InputHandler.hpp  KeyboardInputHandler.cpp  (+18 more)
(+15 files in other folders)
